Fix Express.js logo to display in dark mode

--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -102,3 +102,9 @@
     scale: 1;
   }
 }
+
+.expressjs {
+  path {
+    fill: #ffffff;
+  }
+}
